--- a/paraflow-1.0-alpha1/config/loader.conf
+++ b/paraflow-1.0-alpha1/config/loader.conf
@@ -32,10 +32,10 @@ compactor.threshold=100000
 transformer.class=cn.edu.ruc.iir.paraflow.examples.loader.TpchDataTransformer
 
 #ON_HEAP segments storage directory
-memory.warehouse=file:///Users/Jelly/Desktop/paraflow/
+memory.warehouse=file:///home/guod/Desktop/paraflow
 
 #ON_DISK segments storage directory
-hdfs.warehouse=hdfs://dbiir10:9000/paraflow/
+hdfs.warehouse=hdfs://127.0.0.1:9000/paraflow/
 
 # Kafka consumer
 bootstrap.servers=dbiir02:9192,dbir03:9193,dbiir04:9194,dbiir05:9195,dbiir06:9196,dbiir07:9197,dbiir08:9198,dbiir09:9199
