data create is ok

--- a/paraflow-1.0-alpha1/config/loader.conf
+++ b/paraflow-1.0-alpha1/config/loader.conf
@@ -58,9 +58,15 @@ orc.file.block.size=134217728
 # Parquet
 parquet.compression.codec=snappy
 #block size: 256MB
-parquet.block.size=268435456
+#parquet.block.size=268435456
+#block size: 10KB
+parquet.block.size=10240
 #page size: 1MB
-parquet.page.size=1048576
+#parquet.page.size=1048576
+#dictionary page size: 1KB
+parquet.dictionary.page.size=1024
+#page size: 1KB
+parquet.page.size=1024
 #dictionary page size: 1MB
 parquet.dictionary.page.size=1048576
 parquet.dictionary.enable=true
